...
        android:id="@+id/radioGroupActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioTurnOn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="打开"
            android:padding="12dp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
...
